// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button has the class , no children 1`] = `
<a
  className="addCar"
  onClick={[Function]}
/>
`;

exports[`Button has the class 1`] = `
<a
  className="addCar"
  onClick={[Function]}
>
  создать
</a>
`;
